Add setting for scrollbars width

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -216,6 +216,12 @@ settings:
         type: variable-number
         format: px
         default: 12
+    - 
+        id: scrollbar-width-base
+        title: Scrollbars width
+        type: variable-number
+        format: px
+        default: 10
 
 
 
