Fix kanban issue

--- a/scss/plugins/_plugins.scss
+++ b/scss/plugins/_plugins.scss
@@ -6,3 +6,4 @@
 @use 'community/dataview/dataview';
 @use 'community/folder-note';
 @use 'community/highlight-active-folder-section';
+@use 'community/kanban';
