--- a/scss/cssclasses/_background-image.scss
+++ b/scss/cssclasses/_background-image.scss
@@ -3,6 +3,8 @@ body {
     --fas-note-background-image-blend-mode-dark: normal;
     --fas-note-background-image-blend-mode-light: normal;
     --fas-note-background-image-repeat: no;
+    --fas-note-background-image-blur: 0px;
+    --fas-note-background-image-opacity: 1;
 }
 
 .theme-dark {
@@ -20,6 +22,34 @@ body {
     background-color: var(--workleaves-background);
     background-image: var(--fas-note-background-image-url);
     background-blend-mode: var(--fas-note-background-image-blend-mode);
+}
+
+@container (not (style(--fas-note-background-image-blur: 0) or style(--fas-note-background-image-blur: 0px))) or (not style(--fas-note-background-image-opacity: 1)) {
+    .fas-note-background-image .markdown-source-view:not(.no-background, .no-bg) .cm-editor,
+    .markdown-source-view:is(.background-img, .bg-img) .cm-editor {
+        background-color: rgb(from var(--workleaves-background) r g b / calc(1 - var(--fas-note-background-image-opacity)));
+        backdrop-filter: blur(var(--fas-note-background-image-blur));
+    }
+
+    
+    :is(body:not(.native-scrollbars).fas-note-background-image .markdown-preview-view:not(.no-background, .no-bg))::-webkit-scrollbar-track,
+    :is(body:not(.native-scrollbars) .markdown-preview-view:is(.background-img, .bg-img))::-webkit-scrollbar-track {
+        background-color: rgb(from var(--workleaves-background) r g b / calc(1 - var(--fas-note-background-image-opacity)));
+        backdrop-filter: blur(var(--fas-note-background-image-blur));
+    }
+
+    .fas-note-background-image .markdown-preview-view:not(.no-background, .no-bg),
+    .markdown-preview-view:is(.background-img, .bg-img) {
+        padding: 0;
+
+        > :first-child {
+            padding-block: var(--file-margins-block);
+            padding-inline: calc(0.5 * (100% - var(--file-margins-inline) - var(--file-line-width)) + var(--scrollbar-width));
+            max-width: 100%;
+            background-color: rgb(from var(--workleaves-background) r g b / calc(1 - var(--fas-note-background-image-opacity)));
+            backdrop-filter: blur(var(--fas-note-background-image-blur));
+        }
+    }
 }
 
 @container style(--fas-note-background-image-repeat: no) {
