Add option for the brightness of the notes background

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -907,6 +907,16 @@ settings:
         min: 0
         max: 1
         step: 0.05
+    -
+        id: fas-note-background-image-brightness-light
+        title: Brightness (light mode)
+        type: variable-number
+        default: 1
+    -
+        id: fas-note-background-image-brightness-dark
+        title: Brightness (dark mode)
+        type: variable-number
+        default: 1
 
     -
         id: banners
