Fix compatibility with image caption and image converter

--- a/scss/plugins/_plugins.scss
+++ b/scss/plugins/_plugins.scss
@@ -1,9 +1,10 @@
+@use "core/file-explorer";
+@use "core/file-explorer-hover";
+@use "core/file-explorer-rainbow";
 
-@use 'core/file-explorer';
-@use 'core/file-explorer-hover';
-@use 'core/file-explorer-rainbow';
-
-@use 'community/dataview/dataview';
-@use 'community/folder-note';
-@use 'community/highlight-active-folder-section';
-@use 'community/kanban';
+@use "community/dataview/dataview";
+@use "community/folder-note";
+@use "community/highlight-active-folder-section";
+@use "community/image-caption";
+@use "community/image-converter";
+@use "community/kanban";
