Fix compatibility with DB folder

--- a/scss/plugins/_plugins.scss
+++ b/scss/plugins/_plugins.scss
@@ -3,6 +3,7 @@
 @use "core/file-explorer-rainbow";
 
 @use "community/dataview/dataview";
+@use "community/db-folder";
 @use "community/folder-note";
 @use "community/highlight-active-folder-section";
 @use "community/image-caption";
