--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -2,7 +2,7 @@
     Inspired by ITS theme's infobox callouts from SlRvb (https://publish.obsidian.md/slrvb-docs/ITS+Theme/Callouts/Callout+-+Infoboxes)
 */
 
-@forward '../../shared/list-with-float';
+@forward "../../shared/list-with-float";
 
 body {
     --fas-infobox-padding: var(--size-4-3);
@@ -15,7 +15,6 @@ body {
     --heading-spacing: var(--p-spacing);
 
     max-width: 300px;
-    
 
     .callout-title {
         justify-content: center;
@@ -25,7 +24,12 @@ body {
         display: none;
     }
 
-    h1, h2, h3, h4, h5, h6 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         text-align: center;
     }
 
@@ -37,7 +41,6 @@ body {
     > .callout-content > * {
         padding-inline: var(--fas-infobox-padding);
     }
-
 
     .callout-content hr:not(.sci-fi hr) {
         -webkit-mask-image: none;
@@ -62,7 +65,7 @@ body {
         word-wrap: normal;
         word-break: normal;
     }
-    
+
     &[data-callout-metadata~="no-thead"],
     &[data-callout-metadata~="no-th"] {
         thead {
@@ -78,7 +81,6 @@ body {
     --infobox-background-opacity: 0.4;
 }
 .callout[data-callout="fas-infobox"] {
-
     /* cover */
     .image-embed[alt~="cover"] {
         position: relative;
@@ -129,8 +131,10 @@ body {
     /* background */
     .image-embed[alt~="background"] {
         position: absolute;
-        top: 0; bottom: 0;
-        left: 0; right: 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         z-index: -1;
         overflow: hidden;
     }
@@ -159,10 +163,11 @@ body {
     --overflow-width: 10px;
     --h1-line-height: 1.6;
 
-    &, > .callout-content {
+    &,
+    > .callout-content {
         overflow: visible;
     }
-    
+
     h1 {
         color: var(--text-normal);
         width: calc(100% + 2 * var(--overflow-width));
@@ -183,7 +188,8 @@ body {
         content: "";
         position: absolute;
         bottom: calc(-1 * var(--overflow-width) + 1px);
-        border-top: calc(var(--overflow-width) - 1px) solid color-mix(in srgb, rgb(var(--callout-color)), rgb(0 0 0) 60%);
+        border-top: calc(var(--overflow-width) - 1px) solid
+            color-mix(in srgb, rgb(var(--callout-color)), rgb(0 0 0) 60%);
     }
 
     h1::before {
@@ -215,7 +221,9 @@ body {
         top: 0;
         bottom: 0;
         transform: translateX(var(--overflow-width));
-        svg { color: inherit; }
+        svg {
+            color: inherit;
+        }
     }
 
     .callout-content {
@@ -226,7 +234,8 @@ body {
     h1 {
         display: block;
     }
-    h1::before, h1::after {
+    h1::before,
+    h1::after {
         background: none;
         height: unset;
     }
@@ -243,7 +252,7 @@ body {
     padding-top: 14px;
 
     .callout-title {
-       display: none;
+        display: none;
     }
     .callout-content {
         border: none;
@@ -252,21 +261,42 @@ body {
     &::after {
         content: "";
         position: absolute;
-        left: 0; right: 0;
+        left: 0;
+        right: 0;
         top: 7px;
         border-top: 2px dashed rgba(var(--callout-color), var(--callout-border-opacity));
     }
 }
-.callout[data-callout="fas-infobox"][data-callout-metadata~="gray"]   [data-callout="footer"] { --callout-color: var(--color-gray-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="brown"]  [data-callout="footer"] { --callout-color: var(--color-brown-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="red"]    [data-callout="footer"] { --callout-color: var(--color-red-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="orange"] [data-callout="footer"] { --callout-color: var(--color-orange-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="yellow"] [data-callout="footer"] { --callout-color: var(--color-yellow-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="green"]  [data-callout="footer"] { --callout-color: var(--color-green-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="cyan"]   [data-callout="footer"] { --callout-color: var(--color-cyan-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="blue"]   [data-callout="footer"] { --callout-color: var(--color-blue-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="purple"] [data-callout="footer"] { --callout-color: var(--color-purple-rgb);}
-.callout[data-callout="fas-infobox"][data-callout-metadata~="pink"]   [data-callout="footer"] { --callout-color: var(--color-pink-rgb);}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="gray"] [data-callout="footer"] {
+    --callout-color: var(--color-gray-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="brown"] [data-callout="footer"] {
+    --callout-color: var(--color-brown-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="red"] [data-callout="footer"] {
+    --callout-color: var(--color-red-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="orange"] [data-callout="footer"] {
+    --callout-color: var(--color-orange-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="yellow"] [data-callout="footer"] {
+    --callout-color: var(--color-yellow-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="green"] [data-callout="footer"] {
+    --callout-color: var(--color-green-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="cyan"] [data-callout="footer"] {
+    --callout-color: var(--color-cyan-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="blue"] [data-callout="footer"] {
+    --callout-color: var(--color-blue-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="purple"] [data-callout="footer"] {
+    --callout-color: var(--color-purple-rgb);
+}
+.callout[data-callout="fas-infobox"][data-callout-metadata~="pink"] [data-callout="footer"] {
+    --callout-color: var(--color-pink-rgb);
+}
 
 /* corners */
 .callout[data-callout="fas-infobox"][data-callout-metadata~="corners"] {
@@ -325,4 +355,45 @@ body {
 
 .markdown-source-view .callout[data-callout="fas-infobox"] {
     margin-inline: auto;
+}
+
+/* Color accent */
+.callout[data-callout="fas-infobox"][data-callout-metadata~="accent"] {
+    --hr-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+    --table-row-alt-background: color-mix(
+        in srgb,
+        rgb(from var(--color-accent) r g b / 0.2),
+        rgba(var(--mono-rgb-0), 0.2) 50%
+    );
+    --table-border-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+    --table-header-border-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+
+    .image-embed[alt~="cover"]::after {
+        border-top: calc(0.5 * var(--triangle-size)) solid var(--color-accent);
+    }
+    img[alt*="cover"] {
+        border-bottom: 4px solid var(--color-accent);
+    }
+    img[alt*="icon"] {
+        border: 2px solid var(--color-accent);
+    }
+    h1 {
+        background: color-mix(in srgb, var(--color-accent), rgb(var(--mono-rgb-0)) 20%);
+    }
+    h1::before,
+    h1::after {
+        border-top: calc(var(--overflow-width) - 1px) solid color-mix(in srgb, var(--color-accent), rgb(0 0 0) 60%);
+    }
+    .callout[data-callout="footer"] {
+        background: color-mix(in srgb, var(--color-accent), rgb(var(--mono-rgb-0)) 80%);
+        &::after {
+            border-top: 2px dashed rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+        }
+    }
+    &[data-callout-metadata~="corners"] {
+        &::before,
+        &::after {
+            background-color: color-mix(in srgb, var(--color-accent), rgb(var(--mono-rgb-0)) 20%);
+        }
+    }
 }
